error description added + docker command updated